test/implicitDup7_4.slq
// args: --run

def foo(){
	x:=H(0);
	def f()⇒x;
	measure(f)():=measure(f)(); /// error
}
def main()⇒foo;
